--- a/web/index.html
+++ b/web/index.html
@@ -534,6 +534,10 @@
     </div>
   </div>
 
+    <div id="results"></div>
+
+<script type="module" src="./app.js"></script>
+
   <script>
     // ============================
     // CONFIG
