fix: remove injected JS from index.html

--- a/web/index.html
+++ b/web/index.html
@@ -642,417 +642,8 @@
     <script src="/app.js"></script>
     <link rel="stylesheet" href="/ui.css">
     <link rel="stylesheet" href="/ui.css">
+    </div>
 
-   function pctClass(value){
-      const v = num(value, NaN);
-      if(!Number.isFinite(v) || v === 0) return "neu";
-      return v > 0 ? "pos" : "neg";
-    }
-
-    function fmtBig(n){
-      const v = num(n, NaN);
-      if(!Number.isFinite(v)) return "—";
-      // compact formatting
-      const abs = Math.abs(v);
-      const units = [
-        {k:1e12, s:"T"},
-        {k:1e9,  s:"B"},
-        {k:1e6,  s:"M"},
-        {k:1e3,  s:"K"},
-      ];
-      for(const u of units){
-        if(abs >= u.k) return (v/u.k).toFixed(2).replace(/\.00$/,"") + u.s;
-      }
-      return String(Math.round(v));
-    }
-
-    function badgeClass(r){
-      const R = String(r || "").toUpperCase();
-      if(R === "STRONG") return "strong";
-      if(R === "GOOD") return "good";
-      if(R === "WEAK") return "weak";
-      return "avoid";
-    }
-
-    function buildBinanceTradeUrl(symbol){
-      // simple: open Binance register (ref) if user not connected
-      // later you can switch to a pair/trade URL if you want
-      return BINANCE_REGISTER;
-    }
-
-    function buildBinanceAssetUrl(symbol){
-      return BINANCE_REGISTER;
-    }
-
-    function todayIso(){
-      const d = new Date();
-      const pad = (x)=> String(x).padStart(2,"0");
-      return `${d.getFullYear()}-${pad(d.getMonth()+1)}-${pad(d.getDate())}T${pad(d.getHours())}-${pad(d.getMinutes())}-${pad(d.getSeconds())}`;
-    }
-
-    function debounce(fn, wait=180){
-      let t;
-      return (...args)=>{
-        clearTimeout(t);
-        t = setTimeout(()=>fn(...args), wait);
-      };
-    }
-
-    // ============================
-    // API
-    // ============================
-    async function fetchMarket(){
-      const qs = new URLSearchParams({
-        vs: state.vs,
-        limit: String(state.limit),
-      });
-      const url = `${API_MARKET}?${qs.toString()}`;
-
-      const t0 = performance.now();
-      const res = await fetch(url, { cache: "no-store" });
-      if(!res.ok){
-        throw new Error(`HTTP ${res.status}`);
-      }
-      const json = await res.json();
-      // expected: { assets: [...] } OR array directly
-      const assets = Array.isArray(json) ? json : (Array.isArray(json.assets) ? json.assets : (Array.isArray(json.data) ? json.data : []));
-      state.lastFetchMs = Math.round(performance.now() - t0);
-      return assets;
-    }
-
-    // ============================
-    // NORMALIZE
-    // ============================
-    function normalizeAsset(a){
-      // accept multiple shapes
-      const sym = String(a.symbol || a.sym || "").toUpperCase();
-      const symLower = sym.toLowerCase();
-
-      return {
-        id: a.id || a.coin_id || a.slug || symLower,
-        symbol: sym,
-        symbolLower: symLower,
-        name: a.name || a.coin_name || a.title || sym,
-        rank: num(a.rank ?? a.market_cap_rank, 9999),
-        price: num(a.price ?? a.current_price, NaN),
-        score: num(a.score, NaN),
-        rating: String(a.rating || "").toUpperCase() || "WEAK",
-        chg24: num(a.chg_24h_pct ?? a.price_change_percentage_24h, NaN),
-        chg7: num(a.chg_7d_pct ?? a.price_change_percentage_7d_in_currency, NaN),
-        chg30: num(a.chg_30d_pct ?? a.price_change_percentage_30d_in_currency, NaN),
-        marketCap: num(a.market_cap ?? a.mc ?? a.market_cap_value, NaN),
-        volume: num(a.total_volume ?? a.volume_24h ?? a.vol, NaN),
-      };
-    }
-
-    // ============================
-    // FILTER + SORT
-    // ============================
-    function applyFilters(){
-      const q = state.search.trim().toLowerCase();
-      const wantRating = state.rating;
-
-      let arr = state.assets;
-
-      if(state.mode === "favorites"){
-        arr = arr.filter(x => state.favorites.has(x.symbolLower));
-      }
-
-      if(q){
-        arr = arr.filter(x =>
-          x.symbolLower.includes(q) ||
-          String(x.name||"").toLowerCase().includes(q) ||
-          String(x.rank).includes(q)
-        );
-      }
-
-      if(wantRating !== "all"){
-        arr = arr.filter(x => String(x.rating).toUpperCase() === wantRating);
-      }
-
-      // sort
-      const s = state.sort;
-      const by = (fn) => arr.slice().sort((a,b)=> fn(a,b));
-
-      const safe = (v, fallback=-Infinity) => (Number.isFinite(v) ? v : fallback);
-
-      if(s === "score_desc") arr = by((a,b)=> safe(b.score) - safe(a.score));
-      else if(s === "score_asc") arr = by((a,b)=> safe(a.score, Infinity) - safe(b.score, Infinity));
-      else if(s === "rank_asc") arr = by((a,b)=> safe(a.rank, Infinity) - safe(b.rank, Infinity));
-      else if(s === "rank_desc") arr = by((a,b)=> safe(b.rank) - safe(a.rank));
-      else if(s === "price_desc") arr = by((a,b)=> safe(b.price) - safe(a.price));
-      else if(s === "price_asc") arr = by((a,b)=> safe(a.price, Infinity) - safe(b.price, Infinity));
-      else if(s === "chg24_desc") arr = by((a,b)=> safe(b.chg24) - safe(a.chg24));
-      else if(s === "chg24_asc") arr = by((a,b)=> safe(a.chg24, Infinity) - safe(b.chg24, Infinity));
-
-      state.filtered = arr;
-    }
-
-    // ============================
-    // RENDER
-    // ============================
-    function render(){
-      applyFilters();
-
-      assetsCountEl.textContent = String(state.filtered.length);
-      sourceStampEl.textContent = `Source: CoinGecko • VS: ${state.vs.toUpperCase()}`;
-      affLineEl.textContent = `Affiliation Binance: ${AFF_ID}`;
-
-      // list
-      listEl.innerHTML = "";
-      const frag = document.createDocumentFragment();
-
-      for(const a of state.filtered){
-        frag.appendChild(renderCard(a));
-      }
-      listEl.appendChild(frag);
-
-      miniStatusEl.textContent = state.lastFetchOk
-        ? `OK • ${state.lastFetchMs}ms`
-        : `Erreur API`;
-    }
-
-    function renderCard(a){
-      const card = document.createElement("div");
-      card.className = "card";
-
-      // Top line
-      const top = document.createElement("div");
-      top.className = "cardTop";
-
-      const left = document.createElement("div");
-      left.style.minWidth = "0";
-
-      const title = document.createElement("div");
-      title.className = "cardTitle";
-
-      const star = document.createElement("div");
-      star.className = "star" + (state.favorites.has(a.symbolLower) ? " on" : "");
-      star.title = "Favori";
-      star.innerHTML = `
-        <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
-          <path d="M12 17.3l-6.18 3.25 1.18-6.88L1 7.98l6.91-1 3.09-6.26 3.09 6.26 6.91 1-5 5.69 1.18 6.88L12 17.3z"
-                stroke="currentColor" stroke-width="1.8" stroke-linejoin="round"/>
-        </svg>
-      `;
-      star.addEventListener("click", ()=>{
-        if(state.favorites.has(a.symbolLower)) state.favorites.delete(a.symbolLower);
-        else state.favorites.add(a.symbolLower);
-        saveFavs();
-        render();
-      });
-
-      const sym = document.createElement("div");
-      sym.className = "sym";
-      sym.textContent = a.symbol || "—";
-
-      const rank = document.createElement("div");
-      rank.className = "rank";
-      rank.textContent = `#${a.rank ?? "—"}`;
-
-      const name = document.createElement("div");
-      name.className = "name";
-      name.textContent = a.name || "";
-
-      title.appendChild(star);
-      title.appendChild(sym);
-      title.appendChild(rank);
-      left.appendChild(title);
-      left.appendChild(name);
-
-      const badge = document.createElement("div");
-      badge.className = `badge ${badgeClass(a.rating)}`;
-      badge.textContent = String(a.rating || "WEAK").toUpperCase();
-
-      top.appendChild(left);
-      top.appendChild(badge);
-
-      // Metrics boxes
-      const metrics = document.createElement("div");
-      metrics.className = "metrics";
-
-      const priceBox = document.createElement("div");
-      priceBox.className = "box";
-      priceBox.innerHTML = `<div class="k">PRICE</div><div class="v">${fmtPrice(a.price, state.vs)}</div>`;
-
-      const scoreBox = document.createElement("div");
-      scoreBox.className = "box";
-      scoreBox.innerHTML = `<div class="k">SCORE</div><div class="v mono">${Number.isFinite(a.score) ? Math.round(a.score) : "—"}</div>`;
-
-      metrics.appendChild(priceBox);
-      metrics.appendChild(scoreBox);
-
-      // Changes
-      const changes = document.createElement("div");
-      changes.className = "changes";
-
-      const c24 = document.createElement("div");
-      c24.className = "chg";
-      c24.innerHTML = `<div class="k">24H</div><div class="v ${pctClass(a.chg24)}">${fmtPct(a.chg24)}</div>`;
-
-      const c7 = document.createElement("div");
-      c7.className = "chg";
-      c7.innerHTML = `<div class="k">7D</div><div class="v ${pctClass(a.chg7)}">${fmtPct(a.chg7)}</div>`;
-
-      const c30 = document.createElement("div");
-      c30.className = "chg";
-      c30.innerHTML = `<div class="k">30D</div><div class="v ${pctClass(a.chg30)}">${fmtPct(a.chg30)}</div>`;
-
-      changes.appendChild(c24);
-      changes.appendChild(c7);
-      changes.appendChild(c30);
-
-      // Buttons
-      const rowBtns = document.createElement("div");
-      rowBtns.className = "rowBtns";
-
-      const trade = document.createElement("a");
-      trade.className = "btnRow primary";
-      trade.href = buildBinanceTradeUrl(a.symbol);
-      trade.target = "_blank";
-      trade.rel = "noopener";
-      trade.textContent = "Trade";
-
-      const binance = document.createElement("a");
-      binance.className = "btnRow";
-      binance.href = buildBinanceAssetUrl(a.symbol);
-      binance.target = "_blank";
-      binance.rel = "noopener";
-      binance.textContent = "Binance";
-
-      rowBtns.appendChild(trade);
-      rowBtns.appendChild(binance);
-
-      // Assemble
-      card.appendChild(top);
-      card.appendChild(metrics);
-      card.appendChild(changes);
-      card.appendChild(rowBtns);
-
-      return card;
-    }
-
-    // ============================
-    // CSV EXPORT (client-side)
-    // ============================
-    function exportCsv(){
-      const rows = state.filtered;
-
-      const headers = [
-        "rank","symbol","name","price","score","rating","chg_24h_pct","chg_7d_pct","chg_30d_pct","market_cap","volume"
-      ];
-
-      const esc = (v)=>{
-        const s = String(v ?? "");
-        if(/[,"\n]/.test(s)) return `"${s.replace(/"/g,'""')}"`;
-        return s;
-      };
-
-      const lines = [];
-      lines.push(headers.join(","));
-      for(const a of rows){
-        lines.push([
-          a.rank,
-          a.symbol,
-          a.name,
-          Number.isFinite(a.price) ? a.price : "",
-          Number.isFinite(a.score) ? a.score : "",
-          a.rating,
-          Number.isFinite(a.chg24) ? a.chg24 : "",
-          Number.isFinite(a.chg7) ? a.chg7 : "",
-          Number.isFinite(a.chg30) ? a.chg30 : "",
-          Number.isFinite(a.marketCap) ? a.marketCap : "",
-          Number.isFinite(a.volume) ? a.volume : "",
-        ].map(esc).join(","));
-      }
-
-      const blob = new Blob([lines.join("\n")], { type: "text/csv;charset=utf-8" });
-      const url = URL.createObjectURL(blob);
-
-      const filename = `zilkara_${state.vs.toUpperCase()}_${rows.length}_assets_${todayIso()}.csv`;
-
-      const a = document.createElement("a");
-      a.href = url;
-      a.download = filename;
-      document.body.appendChild(a);
-      a.click();
-      a.remove();
-
-      setTimeout(()=> URL.revokeObjectURL(url), 1200);
-    }
-
-    // ============================
-    // EVENTS
-    // ============================
-    const onSearch = debounce(()=>{ state.search = searchEl.value; render(); }, 140);
-
-    searchEl.addEventListener("input", onSearch);
-    sortEl.addEventListener("change", ()=>{ state.sort = sortEl.value; render(); });
-    ratingEl.addEventListener("change", ()=>{ state.rating = ratingEl.value; render(); });
-
-    vsEl.addEventListener("change", async ()=>{
-      state.vs = vsEl.value;
-      await load();
-    });
-
-    limitEl.addEventListener("change", async ()=>{
-      state.limit = clamp(Number(limitEl.value)||250, 10, 250);
-      await load();
-    });
-
-    modeEl.addEventListener("change", ()=>{
-      state.mode = modeEl.value;
-      render();
-    });
-
-    refreshBtn.addEventListener("click", load);
-    exportBtn.addEventListener("click", exportCsv);
-
-    openBinanceEl.href = BINANCE_REGISTER;
-
-    // ============================
-    // LOAD
-    // ============================
-    async function load(){
-      try{
-        miniStatusEl.textContent = "Chargement…";
-        const raw = await fetchMarket();
-
-        const assets = raw.map(normalizeAsset).filter(x => x.symbol);
-        state.assets = assets;
-        state.lastFetchOk = true;
-
-        // stamp
-        const now = new Date();
-        apiStampEl.textContent = `API ${now.toLocaleTimeString("fr-FR",{hour:"2-digit commit -m "fix: vercel routes/builds"
-git pushgit",minute:"2-digit"})}`;
-         git add vercel.json
-git commit -m "fix: vercel routes/builds"
-git push         
-
-        // render
-        render();
-      }catch(e){
-        state.lastFetchOk = false;
-        console.error(e);
-        miniStatusEl.textContent = "Erreur API";
-        // keep previous render, just update stamp
-        const now = new Date();
-        apiStampEl.textContent = `API erreur`;
-      }
-    }
-
-    // init
-    (function init(){
-      // set initial UI values
-      sortEl.value = state.sort;
-      ratingEl.value = state.rating;
-      vsEl.value = state.vs;
-      limitEl.value = String(state.limit);
-      modeEl.value = state.mode;
-
-      load();
-    })();
   </script>
 </body>
 </html>
