fix: use module + add results container

--- a/web/index.html
+++ b/web/index.html
@@ -2,17 +2,18 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="color-scheme" content="dark" />
-  <title>Zilkâra - Market Scanner</title>
-
+  <title>Zilkara - Market Scanner</title>
   <link rel="stylesheet" href="/ui.css" />
 </head>
 
 <body>
-  <div id="app"></div>
+  <div id="app">
+    <div id="results"></div>
+  </div>
 
-  <script src="/engine.js"></script>
-  <script src="/app.js"></script>
+  <!-- IMPORTANT: app.js est un module -->
+  <script type="module" src="/app.js"></script>
 </body>
 </html>
