--- a/web/index.html
+++ b/web/index.html
@@ -1,31 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
+
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Zilkára — Market Scanner</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Zilkara</title>
 
-  <style>
-    body {
-      background:#070c14;
-      color:white;
-      font-family:system-ui;
-      margin:0;
-      padding:20px;
-    }
+<style>
+body{
+  background:#0b0f14;
+  color:#e6edf3;
+  font-family:-apple-system,BlinkMacSystemFont;
+  margin:0;
+}
 
-    .row {
-      display:flex;
-      justify-content:space-between;
-      padding:8px;
-      border-bottom:1px solid rgba(255,255,255,0.08);
-    }
-  </style>
+#results{
+  padding:16px;
+}
+
+.row{
+  display:grid;
+  grid-template-columns:80px 120px 100px 60px;
+  padding:8px;
+  border-bottom:1px solid #1f2933;
+}
+</style>
+
 </head>
 
 <body>
-
-<h2>Zilkára Market Scanner</h2>
 
 <div id="results">
 Chargement...
