fix: clean index

--- a/web/index.html
+++ b/web/index.html
@@ -1,34 +1,32 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Zilkara</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Zilkara — Market Scanner</title>
 
 <style>
 body{
-  background:#0b0f14;
-  color:#e6edf3;
-  font-family:-apple-system,BlinkMacSystemFont;
-  margin:0;
-}
-
-#results{
-  padding:16px;
+background:#0b0f14;
+color:#e6edf3;
+font-family:system-ui;
+margin:0;
+padding:20px;
 }
 
 .row{
-  display:grid;
-  grid-template-columns:80px 120px 100px 60px;
-  padding:8px;
-  border-bottom:1px solid #1f2933;
+display:grid;
+grid-template-columns:80px 120px 120px 80px;
+padding:8px;
+border-bottom:1px solid #1f2933;
 }
+
 </style>
 
 </head>
-
 <body>
+
+<h2>Zilkara — Market Scanner</h2>
 
 <div id="results">
 Chargement...
