--- a/web/index.html
+++ b/web/index.html
@@ -1,38 +1,18 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Zilkara — Market Scanner</title>
-
-<style>
-body{
-background:#0b0f14;
-color:#e6edf3;
-font-family:system-ui;
-margin:0;
-padding:20px;
-}
-
-.row{
-display:grid;
-grid-template-columns:80px 120px 120px 80px;
-padding:8px;
-border-bottom:1px solid #1f2933;
-}
-
-</style>
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Zilkara — Market Scanner</title>
+  <link rel="stylesheet" href="/ui.css" />
 </head>
 <body>
 
-<h2>Zilkara — Market Scanner</h2>
+  <h1>Zilkara — Market Scanner</h1>
+  <div id="results">Chargement...</div>
 
-<div id="results">
-Chargement...
-</div>
-
-<script type="module" src="/app.js"></script>
+  <!-- CRITIQUE -->
+  <script type="module" src="/app.js"></script>
 
 </body>
 </html>
