fix: clean ESM engine

--- a/web/index.html
+++ b/web/index.html
@@ -1,18 +1,22 @@
-<!DOCTYPE html>
-<html lang="fr">
+<!doctype html>
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Zilkara — Market Scanner</title>
-  <link rel="stylesheet" href="/ui.css" />
+
+<meta charset="utf-8">
+
+<title>Zilkara — Market Scanner</title>
+
 </head>
+
 <body>
 
-  <h1>Zilkara — Market Scanner</h1>
-  <div id="results">Chargement...</div>
+<h1>Zilkara — Market Scanner</h1>
 
-  <!-- CRITIQUE -->
-  <script type="module" src="/app.js"></script>
+<div id="results">
+Chargement...
+</div>
+
+<script type="module" src="/app.js"></script>
 
 </body>
 </html>
