--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,6 @@
 Chargement...
 </div>
 
-<script type="module" src="/app.js"></script>
-
+<script type="module" src="./app.js"></script>
 </body>
 </html>
