fix: load app.js as module

--- a/web/index.html
+++ b/web/index.html
@@ -1,21 +1,17 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="fr">
 <head>
-
-<meta charset="utf-8">
-
-<title>Zilkara — Market Scanner</title>
-
+  <meta charset="UTF-8">
+  <title>Zilkara — Market Scanner</title>
 </head>
 
-<body>
+<body style="background:black;color:white;font-family:Arial">
 
-<h1>Zilkara — Market Scanner</h1>
+  <h1>Zilkara — Market Scanner</h1>
 
-<div id="results">
-Chargement...
-</div>
+  <div id="results">Chargement...</div>
 
-<script type="module" src="./app.js"></script>
+  <script type="module" src="./app.js"></script>
+
 </body>
 </html>
