fix: working browser ESM setup

--- a/web/index.html
+++ b/web/index.html
@@ -1,17 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="color-scheme" content="dark" />
   <title>Zilkara — Market Scanner</title>
+  <link rel="stylesheet" href="./ui.css" />
 </head>
 
-<body style="background:black;color:white;font-family:Arial">
-
-  <h1>Zilkara — Market Scanner</h1>
-
-  <div id="results">Chargement...</div>
+<body>
+  <div class="wrap">
+    <h1>Zilkara — Market Scanner</h1>
+    <div id="results">Chargement…</div>
+  </div>
 
   <script type="module" src="./app.js"></script>
-
 </body>
 </html>
