--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!doctype html>
 <html lang="fr">
 <head>
@@ -8,69 +7,81 @@
   <title>Zilkara — Market Scanner</title>
   <link rel="stylesheet" href="./ui.css" />
 </head>
+
 <body>
   <div class="wrap">
-    <h1>Zilkara — Market Scanner</h1>
+    <header class="top">
+      <h1>Zilkara — Market Scanner</h1>
 
-    <!-- Controls -->
-    <div class="panel">
-      <div class="row">
-        <label class="label" for="preset">Filtre score</label>
-        <select id="preset" class="select">
-          <option value="0">Tous (0)</option>
-          <option value="40">Large (≥ 40)</option>
-          <option value="50">Surveillance (≥ 50)</option>
-          <option value="60">Opportunités (≥ 60)</option>
-          <option value="75">Radar (≥ 75)</option>
-          <option value="90">Extrême (≥ 90)</option>
-        </select>
+      <!-- Petit texte clair -->
+      <p class="hint">
+        <strong>Signal</strong> = score technique (0–100) basé sur liquidité, taille, turnover et momentum (24h).
+        Plus c’est élevé, plus l’actif est “propre” à surveiller.
+      </p>
+
+      <!-- Barre principale (ergonomique, compacte) -->
+      <div class="toolbar">
+        <div class="field">
+          <label class="label" for="preset">Filtre signal</label>
+          <select id="preset" class="select">
+            <option value="all" selected>Tous (0)</option>
+            <option value="large">Large (40)</option>
+            <option value="standard">Standard (60)</option>
+            <option value="radar">Radar (75)</option>
+          </select>
+        </div>
+
+        <div class="field">
+          <label class="label" for="autoRefresh">Auto-refresh</label>
+          <div class="row">
+            <select id="autoRefresh" class="select">
+              <option value="off" selected>Off</option>
+              <option value="10">10s</option>
+              <option value="30">30s</option>
+              <option value="60">60s</option>
+              <option value="120">2m</option>
+              <option value="300">5m</option>
+            </select>
+            <button id="refreshBtn" class="btn" type="button">Rafraîchir</button>
+          </div>
+        </div>
       </div>
 
-      <div class="row">
-        <label class="label" for="refresh">Auto-refresh</label>
-        <select id="refresh" class="select">
-          <option value="0">Off</option>
-          <option value="15">15s</option>
-          <option value="30" selected>30s</option>
-          <option value="60">60s</option>
-          <option value="120">2 min</option>
-        </select>
+      <!-- Avancé -->
+      <details class="advanced" id="advanced">
+        <summary>▶ Avancé</summary>
 
-        <button id="btnRefresh" class="btn" type="button">Rafraîchir</button>
-      </div>
-
-      <details id="advanced" class="details">
-        <summary>Avancé</summary>
-
-        <div class="grid2">
-          <div class="row">
-            <label class="label" for="minScore">Min</label>
-            <input id="minScore" class="input" type="number" min="0" max="100" step="1" value="0" />
+        <div class="advancedGrid">
+          <div class="field">
+            <label class="label" for="minSignal">Min</label>
+            <input id="minSignal" class="input" type="number" min="0" max="100" step="1" value="0" />
           </div>
 
-          <div class="row">
-            <label class="label" for="maxScore">Max</label>
-            <input id="maxScore" class="input" type="number" min="0" max="100" step="1" value="100" />
+          <div class="field">
+            <label class="label" for="maxSignal">Max</label>
+            <input id="maxSignal" class="input" type="number" min="0" max="100" step="1" value="100" />
           </div>
 
-          <div class="row">
-            <label class="label" for="sortBy">Trier par</label>
+          <div class="field">
+            <label class="label" for="sortBy">Tri</label>
             <select id="sortBy" class="select">
-              <option value="score" selected>Score</option>
+              <option value="signal" selected>Signal</option>
               <option value="change24h">Variation 24h</option>
               <option value="marketCap">MarketCap</option>
               <option value="volume">Volume</option>
               <option value="price">Prix</option>
+              <option value="symbol">Symbole</option>
             </select>
           </div>
 
-          <div class="row">
+          <div class="field">
             <label class="label" for="limit">Limite</label>
             <select id="limit" class="select">
               <option value="10">10</option>
               <option value="25">25</option>
               <option value="50" selected>50</option>
               <option value="100">100</option>
+              <option value="250">250</option>
             </select>
           </div>
 
@@ -81,14 +92,27 @@
         </div>
       </details>
 
+      <!-- Statut -->
       <div class="meta">
-        <span id="status">—</span>
-        <span id="updated">—</span>
+        <span id="status"></span>
+        <span id="updated"></span>
       </div>
-    </div>
+    </header>
 
     <!-- Table -->
-    <div id="results" class="results"></div>
+    <section class="tableWrap">
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Symbole</th>
+            <th>Prix</th>
+            <th>24h</th>
+            <th>Signal</th>
+          </tr>
+        </thead>
+        <tbody id="tbody"></tbody>
+      </table>
+    </section>
   </div>
 
   <script type="module" src="./app.js"></script>
